--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build --prod && cp -r build ../../part3/persons-api/build",
-    "deploy": "git push heroku main",
+    "deploy": "git push heroku master",
     "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.11",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
